style.css
:root {
--box-two-top-border: hsl(0, 78%, 62%);
--box-one-top-border: hsl(180, 62%, 55%);
--box-three-top-border: hsl(34, 97%, 64%);
--box-four-top-border: hsl(212, 86%, 64%);

--clr-accent-400: hsl(234, 12%, 34%);
--clr-accent-500: hsl(229, 6%, 66%);
--clr-accent-300: hsl(0, 0%, 98%);

--fw-light: 200;
--fw-normal: 400;
--fw-bold: 600;

}


*, *::before, *::after {
    box-sizing: border-box;
  }

  * {
    margin: 0;
  }
  
  html {
    height: 100%;
  }

  body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    height: 100%;
  }
 
  img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
  }

  input, button, textarea, select {
    font: inherit;
  }
  
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }

  h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    font-weight: inherit;
  }
  
  #root, #__next {
    isolation: isolate;
  }

/* General Styling */

body {
    font-family: 'Poppins';
    font-size: .9375rem;
    background-color: var(--clr-accent-300);
}


.headingText {
    font-weight: var(--fw-light);
    font-size: 1.5rem;
}

.boldText {
    font-weight: var(--fw-bold);
    font-size: 1.5rem;
    opacity: .7;
}

@media screen and (min-width: 650px) {
  .headingText , .boldText {
    font-size: 2rem;
  }
}

.subText {
    font-weight: var(--fw-normal);
    opacity: .4;
}

.cardHeading {
    font-weight: var(--fw-bold);
    opacity: .7;
}

.cardSubtext {
    opacity: .4;
    font-size: .7rem;
}

/* Layout Styling */

body {
  padding-inline: 2.5rem;
}

header {
  text-align: center;
}

.headingText {
  margin-top: 2.75rem;
}

.boldText {
  padding-bottom: .75rem;
}

.subText {
  text-align: center;
  padding-bottom: 4rem;
  max-width: 32rem;
  margin: auto;
}

.cardContainer {
  display: grid;
  gap: 1.5rem;
  place-items: center;
}

@media screen and (min-width: 650px) {
  .cardContainer {
    margin: auto;
    max-width: 900px;
    gap: 1.5rem;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-areas: 
      "Supervisor Team Calculator"
      "Supervisor Karma Calculator";
  }
  

  .cardOne {
    grid-area: Supervisor;
  }

  .cardTwo {
    grid-area: Team;
  }

  .cardThree {
    grid-area: Karma;
  }

  .cardFour {
    grid-area: Calculator;
  }


}

.card {
  background-color: white;
  padding: 1rem 1.5rem 2rem 2rem;
  display: grid;
  border-top-left-radius: .2rem;
  border-top-right-radius: .2rem;
  border-bottom-left-radius: .5rem;
  border-bottom-right-radius: .5rem;
  box-shadow: 0px 15px 25px rgb(225, 225, 225);
  max-width: 30rem;
}

.cardOne {
  border-top: solid 3px var(--box-one-top-border);
}

.cardTwo {
  border-top: solid 3px var(--box-two-top-border);
}

.cardThree {
  border-top: solid 3px var(--box-three-top-border);
}

.cardFour {
  border-top: solid 3px var(--box-four-top-border);
}

.cardHeading {
  padding-bottom: .3rem;
}

.cardSubtext {
  padding-bottom: 2rem;
}

.cardContainer img {
  width: 2.5rem;
  justify-self: end;
}




/* .attribution { 
    font-size: 11px; text-align: center; 
    padding-top: 3rem;
}

.attribution a { 
    color: hsl(228, 45%, 44%); 
} */

